<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45004d"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvFormula"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif"
        android:gravity="end"
        android:textColor="#858585"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/formula"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:gravity="end"
        android:textColor="@color/white"
        android:text="0"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@id/tvFormula"
        />
    
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="40dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/clear"
            android:layout_rowWeight="1"
            android:layout_columnWeight="2"
            android:layout_columnSpan="2"
            android:layout_marginEnd="10dp"
            android:text="@string/reset"
            android:textSize="30sp"
            android:backgroundTint="#de5cff"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/plus"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/plus"
            android:textSize="30sp"
            android:backgroundTint="#de5cff"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/devide"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/devide"
            android:textSize="30sp"
            android:backgroundTint="#de5cff"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/seven"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/seven"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/eight"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/eight"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/nine"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/nine"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/multiply"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/multiply"
            android:textSize="30sp"
            android:backgroundTint="#de5cff"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/four"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/four"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/five"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/five"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/six"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/six"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/mines"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/minus"
            android:textSize="30sp"
            android:backgroundTint="#de5cff"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/one"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/one"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/two"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/two"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/three"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/three"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/equal"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/equal"
            android:textSize="30sp"
            android:backgroundTint="#de5cff"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/zero"
            android:layout_columnSpan="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/zero"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/titik"
            android:layout_columnSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/titik"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            app:cornerRadius = "15dp"/>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>